test/sematest/invalid/method_call.java
class A {
  public static void main(String[] args) {
    new A().blub(null);
  }

  public void blub(A a, int b){

  }
}